--- a/surfhouse/package.json
+++ b/surfhouse/package.json
@@ -10,6 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ajv": "^6.5.2",
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "jquery": "^1.9.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
